[project]
name = "chemfusekit-gui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Federico Aguzzi", email = "62149513+f-aguzzi@users.noreply.github.com" }
]
dependencies = [
    "streamlit>=1.36.0",
    "setuptools>=70.1.1",
    "chemfusekit==3.0.0b2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools>=70.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chemfusekit_gui"]
