[project]
name = "chemfusekit-gui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Federico Aguzzi", email = "62149513+f-aguzzi@users.noreply.github.com" }
]
dependencies = [
    "chemfusekit==3.1.0b3",
    "streamlit>=1.36.0",
    "xlsxwriter>=3.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [

]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chemfusekit_gui"]
